<resources>
    <string name="app_name">CodeLab</string>
    <string name="app">Computer Coding</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome Back</string>
    <string name="dont"> Don\'t have an account?</string>
    <string name="already"> Already have an account?</string>
    <string name="miss_reg">We missed you! Register to get started</string>
    <string name="miss_log">We missed you! Login to get started</string>
    <string name="forget">Forget Password?</string>
    <string name="email">Enter E-mail Address</string>
    <string name="password">Enter Password</string>
    <string name="name">Enter Name</string>
    <string name="need">Need Help?</string>
    <string name="send_email">Send Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="home">Home</string>
    <string name="quiz">Quiz</string>
    <string name="programs">Programs</string>
    <string name="program">Program</string>
    <string name="logout">Logout</string>
    <string name="about">About Us</string>
    <string name="telegram">Telegram</string>
    <string name="instagram">Instagram</string>
    <string name="share">Share</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Programs_10">Total 10 Programs</string>
    <string name="Quiz_10">Total 10 Quiz</string>
    <string name="Quiz_30">Total 30 Quiz</string>
    <string name="java_programs">Java Programs</string>
    <string name="cpp_programs">CPP Programs</string>
    <string name="c_programs">C Programs</string>
    <string name="html5_programs">HTML5 Programs</string>
    <string name="learn_java">Learn Java</string>
    <string name="learn_cpp">Learn CPP</string>
    <string name="learn_c">Learn C</string>
    <string name="question">Question</string>
    <string name="option">Option</string>
    <string name="timer">00:00</string>
    <string name="no">5/10</string>
    <string name="next">Next</string>
    <string name="total_score">Total Score :</string>
    <string name="total_questions">Total Questions :</string>
    <string name="result">Result :</string>
    <string name="Score10">10</string>
    <string name="your_score">Your Score</string>
    <string name="what_we_do">What We Do</string>
    <string name="star_learning_free_programming_languages">Star Learning Free Programming Languages</string>
    <string name="learn_c_programming">Learn C Programming</string>
    <string name="total_9_chapters">Total 9 Chapters</string>
    <string name="total_7_chapters">Total 7 Chapters</string>
    <string name="learn_cpp_programming">Learn CPP Programming</string>
    <string name="total_8_chapters">Total 8 Chapters</string>
    <string name="learn_java_programming">Learn Java Programming</string>
    <string name="learn_html5_programming">Learn HTML5 Programming</string>
    <string name="chapters">Chapters</string>
    <string name="copy_right">Copyright © 2021 Computer Coding</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="follow_us">Follow Us</string>
    <string name="desc">The best learning platform app for Programming Language, they provide tools for student to keep improve programming skill.It provides many topics, skill levels and language for programming Languages.</string>
    <string name="vaibhav_wable">Vaibhav Wable \n Founder Of Computer Coding</string>
    <string name="designed">Designed and Developed By</string>
    <string name="eshali_wable">Eshali Wable \n Developer Of Codelab</string>
    <string name="shravan_lagad">Shravan Lagad \n Designer Of CodeLab</string>
    <string name="version">Version</string>
    <string name="_1_0_0">1.0.0</string>
    <string name="website">Website</string>
    <string name="share_this_app">Share This App</string>
    <string name="website_link">https://icomputercoding.in</string>
    <string name="telegram_link">https://t.me/icomputercoding</string>
</resources>