<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_about"
        android:title="@string/about" />
    

    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/share"
        android:title="@string/share" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/logout"
        android:title="@string/logout" />

    <item android:title="@string/follow_us">
        <menu>
            <item
                android:id="@+id/nav_instagram"
                android:icon="@drawable/instagram"
                android:title="@string/instagram" />

            <item
                android:id="@+id/nav_telegram"
                android:icon="@drawable/telegram"
                android:title="@string/telegram" />
        </menu>
    </item>
</menu>