<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="5dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/card"
                android:gravity="center">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:scaleType="fitEnd"
                    android:src="@drawable/background"
                    tools:ignore="ContentDescription,RtlHardcoded" />

                <TextView
                    android:layout_width="285dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins"
                    android:gravity="bottom|center_vertical"
                    android:paddingStart="10dp"
                    android:shadowColor="#FFFFFF"
                    android:text="@string/app"
                    android:textAlignment="viewStart"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="@dimen/_22sdp"
                    android:textStyle="bold"
                    android:typeface="monospace"
                    tools:ignore="RtlCompat,RtlSymmetry" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <TextView
            android:id="@+id/textview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/what_we_do"
            android:textColor="@color/ColorAccent"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textview2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/star_learning_free_programming_languages"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/_22sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@+id/textview1"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/name"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/_17sdp"
            app:layout_constraintBottom_toTopOf="@+id/chp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview2"
            app:layout_constraintVertical_bias="1.0" />

        <LinearLayout
            android:id="@+id/chp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/name"
            android:orientation="vertical"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name">

            <RelativeLayout
                android:id="@+id/Learn_c"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/white_corners"
                android:elevation="5dp">

                <ImageView
                    android:id="@+id/c_logo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="12dp"
                    android:src="@drawable/c"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@id/c_logo"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/learn_c_programming"
                        android:textColor="@color/colorTextBlack"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/total_8_chapters"
                        android:textColor="@color/hintTextColor"
                        android:textSize="@dimen/_14sdp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/Learn_cpp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/white_corners"
                android:elevation="5dp">

                <ImageView
                    android:id="@+id/cpp_logo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="12dp"
                    android:src="@drawable/cpp"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@id/cpp_logo"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/learn_cpp_programming"
                        android:textColor="@color/colorTextBlack"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/total_9_chapters"
                        android:textColor="@color/hintTextColor"
                        android:textSize="@dimen/_14sdp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/Learn_java"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/white_corners"
                android:elevation="5dp">

                <ImageView
                    android:id="@+id/java_logo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="12dp"
                    android:src="@drawable/java"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@id/java_logo"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/learn_java_programming"
                        android:textColor="@color/colorTextBlack"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/total_7_chapters"
                        android:textColor="@color/hintTextColor"
                        android:textSize="@dimen/_14sdp" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>