<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/card_background"
                android:elevation="5dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="376dp"
                    android:layout_height="90dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="1dp"
                    android:padding="10dp"
                    android:src="@drawable/code"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/icon"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/desc"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/card"
                android:elevation="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/designer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/designed"
                        android:textAlignment="center"
                        android:textColor="@color/colorTextBlack"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/vaibhav"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="90dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/white_corners">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/vaibhav_wable"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/shravan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/vaibhav"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:background="@drawable/white_corners">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/shravan_lagad"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/eshali"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/shravan"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/white_corners">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/eshali_wable"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />
                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/white_corners"
                android:elevation="3dp">

                <ImageView
                    android:id="@+id/about_logo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/ic_about"
                    android:backgroundTint="@color/LinearBlue"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:layout_toEndOf="@id/about_logo"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/version"
                        android:textColor="@color/colorTextBlack"
                        android:textSize="@dimen/_22sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/versionCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/_1_0_0"
                        android:textColor="@color/hintTextColor"
                        android:textSize="@dimen/_14sdp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/telegram"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/white_corners"
                android:elevation="3dp">

                <ImageView
                    android:id="@+id/facebook_logo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/telegram"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:layout_toEndOf="@id/facebook_logo"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/telegram"
                        android:textColor="@color/colorTextBlack"
                        android:textSize="@dimen/_22sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/telegram_link"
                        android:textColor="@color/hintTextColor"
                        android:textSize="@dimen/_10sdp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/white_corners"
                android:elevation="3dp">

                <ImageView
                    android:id="@+id/share_logo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/ic_share"
                    android:backgroundTint="@color/Yellow"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@id/share_logo"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/share"
                        android:textColor="@color/colorTextBlack"
                        android:textSize="@dimen/_22sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/share_this_app"
                        android:textColor="@color/hintTextColor"
                        android:textSize="@dimen/_10sdp" />

                </LinearLayout>

            </RelativeLayout>


        </LinearLayout>


    </ScrollView>

</RelativeLayout>